@@ -2,7 +2,7 @@
 /**
  * @version		$Id$
  * @package		Joomla
- * @subpackage	Content
+ * @subpackage	Weblinks
  * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
@@ -15,7 +15,7 @@ jimport('joomla.application.component.helper');
 jimport('joomla.application.categories');
 
 /**
- * Content Component Category Tree
+ * Weblinks Component Category Tree
  *
  * @static
  * @package		Joomla
